--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -254,19 +254,19 @@
       }
       
       .c-newsList_category {
-        font-family: "neue-haas-grotesk-display", MyYuGothicM, "游ゴシック", "Yu Gothic", YuGothic, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
-        font-size: 14px;
+        font-family: "Shippori Mincho",sans-serif;
+        font-size: 1rem;
         margin: 0 0 10px;
       }
       @media print, screen and (min-width: 768px) and (max-width: 1024px) {
         .c-newsList_category {
-          font-size: 12px;
+          font-size: 0.9rem;
         }
       }
       @media print, screen and (max-width: 767px) {
         .c-newsList_category {
           display: inline-block;
-          font-size: 12px;
+          font-size: 0.9rem;
           margin: 0 15px 0 0;
         }
       }
@@ -284,7 +284,7 @@
       @media print, screen and (max-width: 767px) {
         .c-newsList_date {
           display: inline-block;
-          font-size: 12px;
+          font-size: 1rem;
         }
       }
       
@@ -293,7 +293,7 @@
         line-height: 1.5;
         width: 78%;
         word-break: break-all;
-        font-size: 0.9rem;
+        font-size: 0.94rem;
         font-family: "Shippori Mincho",sans-serif;
       
       }
@@ -301,7 +301,7 @@
         .c-newsList_title {
           width: auto;
           margin: 10px 0 0;
-          font-size: 1rem;
+          font-size: 0.9rem;
           font-family: "Shippori Mincho",sans-serif;
       
         }
@@ -476,13 +476,13 @@
         font-family: "Shippori Mincho B1",serif;
           margin-top: 2rem;
           transition: .6s 1s;
-          font-size: 0.95rem;
+          font-size: 0.94rem;
           letter-spacing: .05em;
       }
       @media print, screen and (max-width: 767px) {
         .aboutService_text {
           width: auto;
-          font-size: 0.95rem;
+          font-size: 0.96rem;
           margin: 20px 0 60px;
       
         }
@@ -1156,7 +1156,7 @@
              line-height: 2.3076923077;
              margin-top: 3.125rem;
              transition: .6s 1s;
-             font-size: 0.95rem;
+             font-size: 0.94rem;
              letter-spacing: .05em;
       
       
