--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -254,13 +254,13 @@ a {
 
 .c-newsList_category {
     font-family: 'Shippori Mincho', sans-serif;
-    font-size: 14px;
+    font-size: 1rem;
     margin: 0 0 10px;
 }
 
 .c-newsList_date {
     font-family: 'Shippori Mincho', sans-serif;
-    font-size: 14px;
+    font-size: 1rem;
     color: #838383;
 }
 
@@ -380,7 +380,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media print, screen and (min-width: 768px) and (max-width: 1024px) {
   .c-newsList_category {
-    font-size: 12px;
+    font-size: 1rem;
   }
 }
 @media print, screen and (max-width: 767px) {
