--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,6 +20,7 @@
     text-align: center;
     padding: 30px;
     margin-top: 50px;
+    
    }
    .footer02 a {
     color: #808080;
@@ -49,6 +50,8 @@
     font-size: 0.8rem;
    }
    
-   
+   html,body {
+  height: 100%;
+}
    
    </style>
