--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -67,7 +67,7 @@
         <img src="/samale-min.webp" alt="パターンオーダーの画像">
       </div>
       <h3 class="c-bannerList_title">PATTERN ORDER</h3>
-      <p class="c-bannerList_text">様々な素材の中からお好みの革の色、金具などをお選びいただいて革小物を製作するセミオーダーを承っております。</p>
+      <p class="c-bannerList_text">パーツごとにお好みの革の色組み合わせ、金具などをお選びいただいて製作するセミオーダーを承っております。</p>
     </a>
   </li>
   <li class="c-bannerList_node">
@@ -272,7 +272,6 @@
       }
       
       .c-newsList_date {
-        font-family: "neue-haas-grotesk-display", MyYuGothicM, "游ゴシック", "Yu Gothic", YuGothic, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
         font-size: 14px;
         color: #838383;
       }
