--- a/src/layouts/Layout2.astro
+++ b/src/layouts/Layout2.astro
@@ -30,6 +30,8 @@ import '@fontsource/shippori-mincho';
 		<title>こだわり</title>
 		<meta name="description" content="当店のこだわりについて" />
 		<meta name="format-detection" content="telephone=no" />
+		<meta name="googlebot" content="noindex">
+        <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
