--- a/src/layouts/Layout4.astro
+++ b/src/layouts/Layout4.astro
@@ -31,6 +31,8 @@ import '@fontsource/shippori-mincho';
 		<title>Web制作のご依頼</title>
 		<meta name="description" content="Web制作のご依頼" />
 		<meta name="format-detection" content="telephone=no" />
+		<meta name="googlebot" content="noindex">
+        <meta name="robots" content="noindex,nofollow" />
 
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
