--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -22,6 +22,54 @@
 
   
 
+  <script
+  is:inline
+  src="https://www.google.com/recaptcha/api.js?render=reCAPTCHA_site_key&hl=ja"
+></script>
+<script>
+  const form = document.getElementById('form')
+  form?.addEventListener('submit', submitFormData)
+
+  function submitFormData(event: Event) {
+    event.preventDefault()
+    grecaptcha.ready(() => {
+      grecaptcha
+        .execute('6LcuhAMiAAAAACpTUdzNw9J4dzq3s_lIhu_sXlYi', { action: 'submit' })
+        .then(async (token) => {
+          const target = event.target as typeof event.target & {
+            name: { value: string }
+            email: { value: string }
+            message: { value: string }
+          }
+
+          const data = {
+            name: target.name.value,
+            email: target.email.value,
+            message: target.message.value,
+            googleReCaptchaToken: token,
+          }
+
+          const formData = new FormData()
+          Object.entries(data).forEach(([key, value]) => {
+            formData.append(key, value)
+          })
+
+          await sendRequest(formData)
+        })
+    })
+  }
+
+  async function sendRequest(formData: FormData) {
+    return await fetch('https://contact-web.form.newt.so/v1/ZS26lqfVZ', {
+      method: 'POST',
+      body: formData,
+      headers: {
+        Accept: 'application/json',
+      },
+    })
+  }
+</script>
+
 
 
 <style>
