--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -18,6 +18,7 @@
       <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5" required="required"> </textarea>
       <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
     </form>
+    <p class="recaptcha_policy">This site is protected by reCAPTCHA and the Google<a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and <a href="https://policies.google.com/terms" target="_blank">Terms of Service</a> apply.</p>
   </div>
 
   
@@ -75,7 +76,17 @@
 <style>
 
 
-    
+.recaptcha_policy {
+    padding: 0;
+    margin: 0;
+    padding-top: 10px;
+    text-align: center;
+    font-size: 11px !important;
+    color: #444 !important;
+}
+
+.grecaptcha-badge { visibility: hidden; }
+
     
     
     
