--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,9 +36,20 @@ import '@fontsource/shippori-mincho';
 
 		<meta name="thumbnail" content="/wokrd-min.jpg" />
 	
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R7FD49YWE3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R7FD49YWE3');
+</script>
+		
 
 		<title>{title}</title>
 	</head>
+	
 	<body>
 		
 		<Main />
