--- a/src/layouts/Layout5.astro
+++ b/src/layouts/Layout5.astro
@@ -40,6 +40,15 @@ import '@fontsource/shippori-mincho';
 		<link rel="icon" href="/king.png">
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
 	
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R7FD49YWE3"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R7FD49YWE3');
+</script>
 
 		<title>{title}</title>
 	</head>
