--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -8,7 +8,7 @@
    
 
 <div>
-    <form id="form">
+    <form id="form" action="https://contact-web.form.newt.so/v1/ZS26lqfVZ" method="post">
       <label class="Home_Contact_Label__hwNpu" for="name">氏名</label>
       <input  class="Home_Contact_InputText__vKPd7"  required="required" name="name"  placeholder="本名をご記入ください" />
       <label  class="Home_Contact_Label__hwNpu"  for="email">メールアドレス</label>
