--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -8,7 +8,7 @@
    
 
 <div>
-    <form action="https://contact-web.form.newt.so/v1/ZS26lqfVZ" method="post">
+    <form action="https://ssgform.com/s/NHTGZqRshncp" method="post">
       <label class="Home_Contact_Label__hwNpu" for="name">氏名</label>
       <input  class="Home_Contact_InputText__vKPd7"  required="required" name="name"  placeholder="本名をご記入ください" />
       <label  class="Home_Contact_Label__hwNpu"  for="email">メールアドレス</label>
@@ -62,7 +62,7 @@
   }
 
   async function sendRequest(formData: FormData) {
-    return await fetch('https://contact-web.form.newt.so/v1/ZS26lqfVZ', {
+    return await fetch('https://ssgform.com/s/NHTGZqRshncp', {
       method: 'POST',
       body: formData,
       headers: {
