--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 
 
-<nav class="sticky" id="stickyNav">
+
+<nav class="sticky">
   <div class="nav-content">
     <div class="logo">
       <a href="/"></a>
@@ -14,107 +15,82 @@
   </div>
 </nav>
 
+<style>
+
+nav {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+
+    font-family: "Shippori Mincho",sans-serif;
+
+  }
 
 
 
 
-<script>
-  window.onscroll = function() {
-    stickyNav();
-  };
+  nav .nav-content {
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; 
+     }
 
-  function stickyNav() {
-    const nav = document.getElementById('stickyNav');
-    const sticky = nav.offsetTop;
+  nav .logo a {
+    font-weight: 500;
+    font-size: 1.05rem;
+    color:#3A3226;
+    
+    text-decoration: none;
 
-    if (window.pageYOffset > sticky) {
-      nav.style.position = 'fixed';
-      nav.style.top = 0;
-      nav.style.width = '100%';
-    } else {
-      nav.style.position = 'static';
+  }
+
+  .nav-content .nav-links {
+    display: flex;
+    padding-right: 20px;
+  }
+
+
+  
+  .nav-content .nav-links li {
+    list-style: none;
+    margin: 0 8px;
+  }
+
+  .nav-links li a {
+    text-decoration: none;
+    color:#3A3226;
+    font-size: 0.95rem;
+    font-weight: 500;
+    padding: 10px 4px;
+    transition: all 0.3s ease;
+    line-height: 2.6176470588;
+      letter-spacing: .084em;
+      gap:3.125rem;
+      font-family: "Shippori Mincho",sans-serif;
+
+  }
+
+  .nav-links li a:hover {
+    color: #0e2431;
+    border-bottom:1px solid black;
+  }
+
+
+  @media print, screen and (max-width: 767px) {
+    .nav-links li a {
+      width: 100%;
+      text-align: center;
+      font-size: 0.98rem;
+      padding: 0px 0px;
+    }
+    nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
+      font-size: 0.98rem;
     }
   }
-</script>
 
-
-<style>
-  body {
-      margin: 0;
-      font-family: "Shippori Mincho", sans-serif;
-    }
-
-    nav {
-      position: -webkit-sticky;
-      position: sticky;
-      top: 0;
-      background-color: rgba(255, 255, 255, 0.8);
-      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-      width: 100%;
-    }
-
-    nav .nav-content {
-      max-width: 1200px;
-      margin: auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px;
-    }
-
-    nav .logo a {
-      font-weight: 500;
-      font-size: 1.05rem;
-      color: #3A3226;
-      text-decoration: none;
-    }
-
-    .nav-content .nav-links {
-      display: flex;
-      gap: 20px;
-    }
-
-    .nav-content .nav-links li {
-      list-style: none;
-    }
-
-    .nav-links li a {
-      text-decoration: none;
-      color: #3A3226;
-      font-size: 0.95rem;
-      font-weight: 500;
-      padding: 10px 4px;
-      transition: all 0.3s ease;
-      line-height: 2.6176470588;
-      letter-spacing: .084em;
-    }
-
-    .nav-links li a:hover {
-      color: #0e2431;
-      border-bottom: 1px solid black;
-    }
-
-    @media print, screen and (max-width: 767px) {
-      .nav-content {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .nav-links {
-        margin-top: 10px;
-      }
-
-      .nav-links li a {
-        width: 100%;
-        text-align: center;
-        font-size: 0.98rem;
-        padding: 5px 0;
-      }
-
-      nav .logo a {
-        font-size: 0.98rem;
-      }
-    }
-  </style>
-  
-
+</style>
