--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,8 @@ import Main from "../components/Main.astro";
 import Footer from "../components/Footer.astro";
 import '@fontsource/shippori-mincho';
 
+import Back from "../components/Back.astro";
+
 
 ---
 
@@ -52,6 +54,7 @@ import '@fontsource/shippori-mincho';
 	<body>
 		
 		<Main />
+		<Back />
 		<Footer />
 		<slot />
 	</body>
