--- a/src/layouts/Layout3.astro
+++ b/src/layouts/Layout3.astro
@@ -12,6 +12,7 @@ import Leather from "../components/Leather.astro";
 import Footer from "../components/Footer.astro";
 
 import '@fontsource/shippori-mincho';
+import Back from "../components/Back.astro";
 
 
 ---
@@ -44,6 +45,7 @@ import '@fontsource/shippori-mincho';
 		<Header />
 
 		<Leather />
+		<Back />
 
 		<Footer />
 		<slot />
