--- a/src/layouts/Layout2.astro
+++ b/src/layouts/Layout2.astro
@@ -12,6 +12,7 @@ import About from "../components/About.astro";
 import Footer from "../components/Footer.astro";
 
 import '@fontsource/shippori-mincho';
+import Back from "../components/Back.astro";
 
 
 ---
@@ -43,6 +44,7 @@ import '@fontsource/shippori-mincho';
 	<body>
 		<Header />
 		<About />
+		<Back />
 
 		<Footer />
 		<slot />
