--- a/src/layouts/Layout4.astro
+++ b/src/layouts/Layout4.astro
@@ -11,6 +11,7 @@ import Header from "../components/Header.astro";
 import Web from "../components/Web.astro";
 import Footer from "../components/Footer.astro";
 
+import Back from "../components/Back.astro";
 
 import '@fontsource/shippori-mincho';
 
@@ -44,6 +45,7 @@ import '@fontsource/shippori-mincho';
 	<body>
 
 		<Web />
+		<Back />
 
 		<Footer />
 		<slot />
