--- a/src/layouts/Layout6.astro
+++ b/src/layouts/Layout6.astro
@@ -11,6 +11,8 @@ import Header from "../components/Header.astro";
 
 import Leagal from "../components/Leagal.astro";
 
+import Back from "../components/Back.astro";
+
 
 import Footer from "../components/Footer.astro";
 
@@ -48,7 +50,7 @@ import '@fontsource/shippori-mincho';
 
         <Header />
         <Leagal />
-
+		<Back />
 		<Footer />
 		<slot />
 	</body>
