--- a/src/layouts/Layout7.astro
+++ b/src/layouts/Layout7.astro
@@ -10,7 +10,7 @@ const { title,description,image } = Astro.props;
 import Header from "../components/Header.astro";
 
 import Productlist from "../components/Productlist.astro";
-
+import Back from "../components/Back.astro";
 
 import Footer from "../components/Footer.astro";
 
@@ -49,6 +49,7 @@ import '@fontsource/shippori-mincho';
         <Header />
 
         <Productlist />
+		<Back />
 
 		<Footer />
 		<slot />
