--- a/src/layouts/Layout8.astro
+++ b/src/layouts/Layout8.astro
@@ -11,7 +11,7 @@ import Header from "../components/Header.astro";
 
 import Keycase from "../components/Keycase.astro";
 
-
+import Back from "../components/Back.astro";
 import Footer from "../components/Footer.astro";
 
 
@@ -49,7 +49,7 @@ import '@fontsource/shippori-mincho';
         <Header />
 
         <Keycase />
-
+		<Back />
 		<Footer />
 		<slot />
 	</body>
