--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,8 @@
       <li><a href="/">ホーム</a></li>
       <li><a href="/kodawari">こだわり</a></li>
       <li><a href="/productlist">商品</a></li>
-      <li><a href="#">English</a></li>
+      <li><a href="/">English</a></li>
+
     </ul>
   </div>
 </nav>
