--- a/src/components/Back.astro
+++ b/src/components/Back.astro
@@ -1,31 +1,30 @@
-<a class="pagetop" href="#"><div class="pagetop__arrow"></div></a>
+<a href="#" id="page-top">TOP</a>
 
 <style>
-
-.pagetop {
-    height: 40px;
-    width: 40px;
+#page-top {
     position: fixed;
-    right: 30px;
-    bottom: 30px;
-    background: #fff;
-    border: solid 2px #333;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
+    right: 10px;
+    bottom: 25px;
+    height: 50px;
+    text-decoration: none;
+    font-weight: bold;
+    transform: rotate(90deg);
+    font-size: 90%;
+    line-height: 1.5rem;
+    color: #737373;
+    padding: 0 0 0 35px;
+    border-top: solid 1px;
 }
-
-.pagetop__arrow {
-    height: 10px;
-    width: 10px;
-    border-top: 3px solid #333;
-    
-    border-right: 3px solid #333;
-    transform: translateY(20%) rotate(-45deg);
-}
-.pagetop {
-    box-shadow: 0 4px 6px rgb(0 0 0 / 30%);
+#page-top::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -1px;
+    left: 0px;
+    width: 15px;
+    border-top: solid 1px;
+    transform: rotate(35deg);
+    transform-origin: left top;
 }
 </style>
+
