--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,23 +1,19 @@
 
 <div class="top-vis-area posi-r">
-    <div class="top-visual bg-style"><section id="banner">
-<div class="inner">
+    <div class="top-visual bg-style">
+    <section id="banner">
+    <div class="inner">
     
     <h1>Pirca Mabui</h1>
     <p>Leather craft goods<br>
-    Official 
-
-<a href="#down" class="more scrolly"></a>
+    Official <a href="#down" class="more scrolly"></a>
 
 
-</section></div>
-            
+    </section>
+    </div>
+</div>
 
-
-
- </div>
-  
-    <nav class="sticky">
+    <nav id="down" class="sticky">
       <div class="nav-content">
         <div class="logo">
           <a href="/"></a>
@@ -30,9 +26,10 @@
         </ul>
       </div>
     </nav>
+    
   
   
-<section id="down" class="introduction astro-HR23OLMI">
+<section  class="introduction astro-HR23OLMI">
     <div  class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
         <h2  class="introduction__heading astro-HR23OLMI">ABOUT</h2>
@@ -1307,10 +1304,10 @@ img{
 }
 
 
-nav {
-      position: -webkit-sticky;
-      position: sticky;
-      top: 0;
+    nav {
+      position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
       background-color: rgba(255, 255, 255, 0.8);
       box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
       width: 100%;
