--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -10,7 +10,8 @@
   <section class="introduction astro-HR23OLMI">
   <div class="introduction__container astro-HR23OLMI">
     <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-    <h2 class="introduction__heading astro-HR23OLMI">イタリア、トスカーナ州で作られたイタリアンレザー</h2>
+    <h2 class="introduction__heading astro-HR23OLMI">
+        <span class="ttl_line">トスカーナ州で作られたItalyレザー</span></h2>
     <p class="introduction__text astro-HR23OLMI">Pirca Mabuiで主に扱っている革は、イタリアのトスカーナ州ポンテ・ア・エゴラ地区にあるVirgilio Conceria Artigiana社が製造する、表面のスクラッチ加工が特徴のショルダー革です。<br class="sp"><br class="sp">歴史のある古代のタンニン鞣し製法“バケッタ製法”を蘇らせて誕生させた、表面に毛羽立たせる加工を施した牛革。<br class="u-pc-only"><br class="pc"><br class="sp">化学薬品を一切使用せず、植物性タンニンで時間をかけてじっくりと丁寧に鞣しています。<br class="sp"><br class="sp">表面の起毛は和紙のような独特の風合いでザラザラした肌触りから、使用していくにつれ内側からのオイルが馴染み、3カ月程度で起毛部分が寝て表面はツルツルになり、その後は美しいツヤ肌になっていきます。<br class="sp"><br class="sp">経年変化による革を育てる楽しみが味わえる、高級素材のひとつです。</p>
       <div class="about__button" data-astro-cid-j7pv25f6="">
         <a href="/aboutleather" class="button center" data-astro-cid-vnzlvqnm="">詳細をみる
@@ -19,6 +20,8 @@
                     </path></svg></a></div>
                     
     </div>
+
+    
     
     <figure class="introduction__map astro-HR23OLMI">
     <img src="/fleeee-min.webp" alt="革の説明" class="astro-HR23OLMI">
@@ -30,9 +33,8 @@
   <section class="introduction astro-HR23OLMI">
     <div class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-      <h2 class="introduction__heading astro-HR23OLMI">主に２種類の麻糸を使用しています </h2>
-      <p class="introduction__text astro-HR23OLMI">①&nbsp;1847年創業のフランスの高級麻糸Fil Au Chinoisはエルメスをはじめ、多くの高級メゾンやこだわりを持つ職人達に愛用されているロウ引き麻糸です。
-        <br class="sp"><br class="sp">19世紀末当時の作り方で熟練の職人の手によって製造されているこの麻糸は、丈夫な天然亜麻から作られています。
+      <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">主に２種類の麻糸を使用しています</span> </h2>
+      <p class="introduction__text astro-HR23OLMI">①&nbsp;1847年創業のフランスの高級麻糸Fil Au Chinoisはエルメスをはじめ、多くの高級メゾンやこだわりを持つ職人達に愛用されているロウ引き麻糸です。<br class="sp"><br class="sp">19世紀末当時の作り方で熟練の職人の手によって製造されているこの麻糸は、丈夫な天然亜麻から作られています。
         <br class="sp"><br class="u-pc-only">②&nbsp;SGS国際検査に認証され、かつヨーロッパEN71-3安全基準を満たしており、丈夫で摩擦に強く、滑らかな糸通りと鮮やかな色を保つ高品質の麻糸です。</p></div>
       <figure class="introduction__map astro-HR23OLMI">
       <img src="/fefeknfefee-min.webp" alt="糸の説明" class="astro-HR23OLMI">
@@ -46,7 +48,7 @@
     <section class="introduction astro-HR23OLMI">
       <div class="introduction__container astro-HR23OLMI">
         <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-        <h2 class="introduction__heading astro-HR23OLMI">PRYM社(ドイツ)</h2>
+        <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">PRYM社(ドイツ)</span></h2>
         <p class="introduction__text astro-HR23OLMI">ドイツの老舗金具メーカー「PRYM（プリム）」同社は他のメーカーとは比べ物にならないほどの長い歴史があり、その歴史は400年以上を誇ります。<br class="sp"><br class="pc"><br class="sp">金具は少し硬めで、「カチッ」とした高い音が開閉時に聞けることでしょう。知る人ぞ知るあの「ドイツホック」を製造していたりと、レザーファンにはたまらない金具を提供し続けてくれているメーカーです。</p>
         </div>
         
@@ -62,7 +64,7 @@
       <section class="introduction astro-HR23OLMI">
         <div class="introduction__container astro-HR23OLMI">
           <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-          <h2 class="introduction__heading astro-HR23OLMI">Amiet社（スイス）</h2>
+          <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">Amiet社（スイス）</span></h2>
           <p class="introduction__text astro-HR23OLMI">1945年創業のスイス発の老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp">amiet社は、ブリーフケースやアタッシュケースなどに使われる「ロック金具」のメーカーとして有名です。
             <br class="sp"><br class="sp"><br class="pc">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。
           </p>
@@ -81,6 +83,13 @@
 
 <style>
     
+
+    .ttl_line {
+    border-bottom: 1px solid;
+    padding-bottom: 9px;
+    line-height: 2;
+}
+
 @media screen and (max-width: 767px) {
                 .about__button[data-astro-cid-j7pv25f6] {
                     margin-top:48px;
