--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -35,7 +35,7 @@
 
               
               <p><img loading="lazy" src="/sampleleather-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-              <p>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc">(&thinsp;仕入れから製作をするため、すべての色から選択ができます&thinsp;）<br class="pc"><br class="pc"><br class="sp"><br class="sp">⬇&thinsp;次の画像をご覧ください。</p>
+              <p>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc">(&thinsp;仕入れから製作をするため、すべての色から選択ができます&thinsp;）</p>
               <p>&nbsp;</p>
               <p><img loading="lazy" src="/aefeaaef-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
               <p>ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
