--- a/src/components/Leagal.astro
+++ b/src/components/Leagal.astro
@@ -10,10 +10,10 @@
     <p class="c-pageSection_text">販売業者<br>ヘルナンデス</p>
     <p class="c-pageSection_text">販売責任者:<br>ヘルナンデス</p>
     <p class="c-pageSection_text">取り扱い商品<br>小物や鞄等の皮革製品（生地製品）</p>
-    <p class="c-pageSection_text">所在地<br>北海道帯広市西9条南1-2-1</p>
+    <p class="c-pageSection_text">所在地<br>北海道帯広市</p>
     <p class="c-pageSection_text">電話番号<br>(※申し訳ございませんが、電話の窓口は設けておりません。お問い合わせフォームにてお願いいたします。)</p>
     <p class="c-pageSection_text">連絡先メールアドレス<br>rafale944@gmail.com</p>
-    <p class="c-pageSection_text">ホームページURL<br>https://</p>
+    <p class="c-pageSection_text">ホームページURL<br>https://pircamabui.com/</p>
   </section>
   <section class="c-pageSection">
     <h2 class="c-pageSection_title">モニター表示との相違について</h2>
@@ -65,6 +65,20 @@
      ・コンビニ決済、銀行振込 商品注文時点から約3日間の期限内にお支払いください。お支払い期限を過ぎると、自動でキャンセルとなります。 
     </p>
   </section>
+
+  <section class="c-pageSection">
+    <h2 class="c-pageSection_title">領収書について</h2>
+    <p class="c-pageSection_text">
+     ・当店では、領収書の発行は行っておりません。各決算事業者様のご利用明細をご利用ください。<br>
+    </p>
+  </section>
+
+  <section class="c-pageSection">
+    <h2 class="c-pageSection_title">納品書について</h2>
+    <p class="c-pageSection_text">
+     ・個人情報と環境保護の取り組みとして、ペーパーレス化を実装しており、お届けのご注文商品に納品書（お買上明細書）は同封いたしておりませんので、何卒ご理解のほどよろしくお願い申し上げます。<br>
+    </p>
+  </section>
   <section class="c-pageSection">
     <h2 class="c-pageSection_title">製品のお届けについて</h2>
     <p class="c-pageSection_text">
@@ -74,7 +88,7 @@
       ・ご注文受付後に納期の変更等が発生した際には別途Ｅメールでご連絡を差し上げます。
     </p>
     <p class="c-pageSection_text">
-      ※交通事情、また天候等による交通の乱れにより、配送に遅れが生じる可能性がございます。遅延状況は当店より発送時にお送りする確認メールに記載された問い合わせ番号にて、指定の運送会社まで直接お問い合わせ下さい。<br>
+      ※交通事情、また天候等による交通の乱れにより、配送に遅れが生じる可能性がございます。遅延状況は当店より発送時にお送りする確認メールに記載された問い合わせ番号にて、指定の運送会社まで直接お問い合わせ下さい。<br><br>
       ※年末年始等交通の混雑、大雪や台風などの悪天候による交通の乱れにより、配送に遅れが生じる可能性がございます。遅延状況は当店より発送時にお送りする確認メールに記載された問い合わせ番号にて、指定の運送会社まで直接お問い合わせ下さい。
     </p>
   </section>
@@ -82,25 +96,25 @@
     <h2 class="c-pageSection_title">返品・交換について</h2>
     <p class="c-pageSection_text">
       商品の返品は下記の場合に限り承り、商品到着後～7日以内にご連絡下さい。<br>
-      確認後、当店より商品返品方法をご案内させていただきます。<br>
+      <p class="c-pageSection_text">
+        ・注文の商品と送られてきた商品が相違していた場合。<br>
+        ・誤配送の際は当店負担とさせていただきます。
+      
+      確認後、当店より商品返品方法をご案内させていただきます。<br><br>
       （お届けから一週間以内以上が過ぎますと、返品につきましてはお受けいたしかねますのでご注意下さい。）<br>
       製作を開始してからの途中キャンセルや完成後の返品が出来ません。<br class="sp">このため製作開始後のキャンセルはお受け致しかねます。
       <br>※ご連絡がないまま返送された場合には、返品・交換をお受けできませんのでご注意ください。 
 
     </p>
-    <p class="c-pageSection_text">
-      ・商品が不良品、もしくは汚れや破損があった場合。<br>
-      ・注文の商品と送られてきた商品が相違していた場合。<br>
-      ・不良品・誤配送の際は当店負担とさせていただきます。
-    </p>
+ 
     <p class="c-pageSection_text">
       ※お届けした商品に不具合がなく、下記に該当するお客様のご都合による返品・交換はお受け出来ません。予めご了承の上、よくご検討いただきご注文下さい。
     </p>
     <p class="c-pageSection_text">
-      ・「使い勝手が悪い」「イメージが違う」など個人的な感覚や感情による理由。<br>
       ・「ディスプレイで見た色と実物の色が違う」というご指摘。<br>
       ・常識を超えた神経質な商品へのご指摘。<br>
-      ・お客様のもとでキズや汚れが生じた商品。<br>
+      ・お客様のもとでキズや汚れが生じた商品。<br>      
+      ・「使い勝手が悪い」「イメージが違う」など個人的な感覚や感情による理由。<br>
       ・一度ご使用になられた商品。<br>
       ・商品到着後8日以上経過した商品。<br>
       ・商品パッケージなどを紛失したり破損・破棄した商品。
