--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -373,7 +373,7 @@ img.cover {
 
 .summary-box.column h1 {
   margin-top: 50px;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     line-height: 2.0;
 
     font-family: 'Shippori Mincho', serif;
@@ -413,7 +413,7 @@ img.cover {
    
    .introduction__heading {
     font-family: 'Shippori Mincho', sans-serif;
-        font-size: 1.4rem;
+        font-size: 1.25rem;
        line-height: 1.7;
        transition: 2s cubic-bezier(.16,1,.3,1);
        font-style: italic;
@@ -436,7 +436,7 @@ img.cover {
        line-height: 2.3076923077;
        margin-top: 3.125rem;
        transition: .6s 1s;
-       font-size: 0.91rem;
+       font-size: 0.92rem;
        letter-spacing: .05em;
 
 
@@ -473,12 +473,21 @@ img.cover {
        letter-spacing: .05em;
        line-height: 1.6923076923;
        color: #333;
-       
+       margin: 0;
+       font-family: 'Shippori Mincho', sans-serif;
+
 
    }
+
    
 
-            @media print, screen and (max-width: 767px) {
+     @media print, screen and (max-width: 767px) {
+
+    .summary-box.column h1 {
+    font-size: 1.75rem;
+
+}
+
 
 
     .introduction__map[data-astro-cid-v2cbyr3p]{
@@ -509,7 +518,7 @@ img.cover {
   }
 
   .introduction__heading {
-    font-size: 1.2rem;
+    font-size: 1.16rem;
     line-height: 1.7;
   }
 
@@ -550,15 +559,7 @@ html {
           -webkit-tap-highlight-color: transparent
       }
       
-      body {
-          margin: 0;
-          color: #333;
-          -moz-osx-font-smoothing: grayscale;
-       -webkit-font-smoothing: antialiased;
-       text-rendering: optimizeLegibility;
-       font-family: 'Shippori Mincho', sans-serif;
-
-      }
+  
 
 main {
     display: block
