--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -260,7 +260,7 @@
       @media print, screen and (max-width: 767px) {
         .c-newsList_category {
           display: inline-block;
-          font-size: 0.9rem;
+          font-size: 0.94rem;
           margin: 0 15px 0 0;
         }
       }
@@ -294,7 +294,7 @@
         .c-newsList_title {
           width: auto;
           margin: 10px 0 0;
-          font-size: 0.9rem;
+          font-size: 0.96rem;
           font-family: "Shippori Mincho",sans-serif;
       
         }
@@ -535,10 +535,8 @@
         }
 
         .c-bannerList_text {
-        line-height: 2;
-        margin: 20px 0 0px;
-        font-size: 1rem;
-        font-family: "Shippori Mincho",sans-serif;
+   
+        font-size:.96rem;
       
       }
       }
