--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -33,7 +33,7 @@
   <section class="introduction astro-HR23OLMI">
     <div class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-      <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">主に２種類の麻糸を使用しています</span> </h2>
+      <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">こだわりの麻糸</span> </h2>
       <p class="introduction__text astro-HR23OLMI">①&nbsp;1847年創業のフランスの高級麻糸Fil Au Chinoisはエルメスをはじめ、多くの高級メゾンやこだわりを持つ職人達に愛用されているロウ引き麻糸です。<br class="sp"><br class="sp">19世紀末当時の作り方で熟練の職人の手によって製造されているこの麻糸は、丈夫な天然亜麻から作られています。
         <br class="sp"><br class="u-pc-only">②&nbsp;SGS国際検査に認証され、かつヨーロッパEN71-3安全基準を満たしており、丈夫で摩擦に強く、滑らかな糸通りと鮮やかな色を保つ高品質の麻糸です。</p></div>
       <figure class="introduction__map astro-HR23OLMI">
