--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -5,7 +5,7 @@
     <h1 class="section-heading">当店について</h1>
    
   </div>
-
+  <br class="sp">
 
   <section class="introduction astro-HR23OLMI">
   <div class="introduction__container astro-HR23OLMI">
