--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -49,7 +49,7 @@
       <div class="introduction__container astro-HR23OLMI">
         <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
         <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">400年以上の伝統と音の贅沢</span></h2>
-        <p class="introduction__text astro-HR23OLMI">ドイツの老舗金具メーカー「PRYM（プリム）」同社は他のメーカーとは比べ物にならないほどの長い歴史があり、その歴史は400年以上を誇ります。<br class="sp"><br class="pc"><br class="sp">金具は少し硬めで、「カチッ」とした高い音が開閉時に聞けることでしょう。知る人ぞ知るあの「ドイツホック」を製造していたりと、レザーファンにはたまらない金具を提供し続けてくれているメーカーです。</p>
+        <p class="introduction__text astro-HR23OLMI">ドイツの老舗金具メーカー「PRYM（プリム）」同社は他のメーカーとは比べ物にならないほどの長い歴史があり、その歴史は400年以上を誇ります。<br class="sp"><br class="pc"><br class="sp">金具は少し硬めで、「カチッ」とした高い音が開閉時に聞けることでしょう。<br class="sp"><br class="sp">知る人ぞ知るあの「ドイツホック」を製造していたりと、レザーファンにはたまらない金具を提供し続けてくれているメーカーです。</p>
         </div>
         
         <figure class="introduction__map astro-HR23OLMI">
@@ -65,8 +65,7 @@
         <div class="introduction__container astro-HR23OLMI">
           <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
           <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">廃業した老舗の逸品</span></h2>
-          <p class="introduction__text astro-HR23OLMI">1945年創業のスイス発の老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp">amiet社は、ブリーフケースやアタッシュケースなどに使われる「ロック金具」のメーカーとして有名です。
-            <br class="sp"><br class="sp"><br class="pc">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。
+          <p class="introduction__text astro-HR23OLMI">1945年創業のスイス発の老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp">パーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="sp"><br class="sp"><br class="pc">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。
           </p>
           </div>
           
