--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -81,12 +81,12 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          LONGWALLET             </div>
+          WALLET             </div>
         <time class="newsList_date c-newsList_date">
                    </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-      長財布       </h3>
+        ミニマムラウンドウォレット       </h3>
     </div>
     <div class="newsList_img c-newsList_img">
       <img src="/coming.webp">
